kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-preview-card-main
  namespace: default
spec:
  selector:
    app: blog-preview-card-main-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
